--- a/src/styles.css
+++ b/src/styles.css
@@ -45,11 +45,12 @@ em {
   max-width: 30%;
   padding: 20px;
   border-radius: 20px;
-  background-color: rgba(100, 100, 130, 1);
+  background-color: rgba(75, 75, 100, 1);
   float: left;
 }
 .scaryText{
-  color:red;
+  color:rgb(255,0,0);
+  text-shadow: 2px 2px black;
 }
 .controls {
   display: none;
